[update] changes project

--- a/app/views/website/index.njk
+++ b/app/views/website/index.njk
@@ -3,6 +3,10 @@
 {% block content %}
 
 
-  <vulkano-webcomponent></vulkano-webcomponent>
+  <div class="contain-embed">
+
+    <vulkano-webcomponent></vulkano-webcomponent>
+
+  </div>
 
 {% endblock %}
