--- a/client/style.scss
+++ b/client/style.scss
@@ -1,2 +1,13 @@
 @import './scss/modules.scss';
 
+
+body {
+  background-color: #010307;
+}
+
+.contain-embed {
+  width: 670px;
+  margin: auto;
+  background-color: #010307;
+
+}
